Correct title from 'Taksha' to 'Taksa'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Taksha</title>
+  <title>Taksa</title>
   <style>
     body { font-family: Arial, sans-serif; display: grid; place-items: center; min-height: 80vh; background-color: #f4f4f4; }
     h1 { font-size: 4rem; color: #333; }
