--- a/index.html
+++ b/index.html
@@ -75,10 +75,19 @@
                     <span class="ml-3 text-2xl font-bold text-white">Takşa</span>
                 </div>
                 <!-- Navigation Links -->
-                <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
+                <div class="hidden sm:ml-6 sm:flex sm:space-x-8 items-center">
                     <a href="#about" class="text-gray-300 hover:text-white inline-flex items-center px-1 pt-1 font-medium">About</a>
                     <a href="#features" class="text-gray-300 hover:text-white inline-flex items-center px-1 pt-1 font-medium">Features</a>
-                    <a href="#involved" class="text-gray-300 hover:text-white inline-flex items-center px-1 pt-1 font-medium">Get Involved</a>
+                    <!-- **** MODIFICATION 3: "Get Involved" changed to "Community" **** -->
+                    <a href="#community" class="text-gray-300 hover:text-white inline-flex items-center px-1 pt-1 font-medium">Community</a>
+                    
+                    <!-- **** MODIFICATION 4: Added GitHub Link with Logo **** -->
+                    <a href="https://github.com/taksa-factory" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white inline-flex items-center" title="Visit our GitHub Organization">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.009-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.026 2.747-1.026.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                    
                     <a href="#contact" class="btn-primary ml-4">Contact Us</a>
                 </div>
             </div>
@@ -91,8 +100,9 @@
             <h1 class="text-4xl sm:text-6xl font-extrabold text-white tracking-tight">
                 Takşa: The Open Source Factory OS
             </h1>
+            <!-- **** MODIFICATION 1: Removed "India's" **** -->
             <p class="mt-6 text-xl text-gray-300 max-w-3xl mx-auto">
-                Empowering India's Manufacturing MSMEs with AI-powered insights and Industry 5.0 capabilities.
+                Empowering Manufacturing MSMEs with AI-powered insights and Industry 5.0 capabilities.
             </p>
             <p class="mt-4 text-2xl font-bold text-white">
                 From India. For the World.
@@ -106,13 +116,14 @@
     <!-- Partners Section -->
     <div class="bg-gray-900 py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- **** MODIFICATION 2: Changed text to "Supported by" **** -->
             <p class="text-center text-sm font-semibold text-gray-400 uppercase tracking-wider mb-6">
-                From the labs of
+                Supported by
             </p>
             <div class="flex flex-wrap justify-center items-center">
                 <span class="partner-logo p-2">ARTPARK @ IISc</span>
                 <span class="partner-logo p-2">Indian Institute of Science</span>
-                <span class="partner-logo p-2">Dept. of Science & Technology</span>
+                <!-- **** MODIFICATION 2: Removed "Dept. of Science & Technology" **** -->
                 <span class="partner-logo p-2">Government of Karnataka</span>
             </div>
         </div>
@@ -123,8 +134,9 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center">
                 <h2 class="text-base font-semibold text-blue-400 tracking-wide uppercase">Why We Are Here</h2>
+                <!-- **** MODIFICATION 5: Removed "India's" **** -->
                 <p class="mt-2 text-3xl font-extrabold text-white sm:text-4xl">
-                    Setting the Stage for India's Manufacturing Growth
+                    Setting the Stage for Manufacturing Growth
                 </p>
                 <p class="mt-4 text-lg text-gray-300 max-w-2xl mx-auto">
                     Takşa is building an Atmanirbhar Bharat by cutting down complexity, bridging the information flow across the value chain, and democratizing access to next-generation technology.
@@ -178,8 +190,9 @@
         </div>
     </div>
 
-    <!-- Get Involved Section -->
-    <div id="involved" class="section">
+    <!-- Get Involved Section (Now "Community") -->
+    <!-- **** MODIFICATION 3: Changed id="involved" to id="community" **** -->
+    <div id="community" class="section">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
