Update logo images in index.html
Removed filters from logo images for clarity.

--- a/index.html
+++ b/index.html
@@ -117,11 +117,8 @@
             </p>
             <!-- **** MODIFICATION: Pointing to your uploaded logos **** -->
             <div class="flex flex-wrap justify-center items-center">
-                <!-- This filter turns your dark logo white -->
-                <img src="artpark_logo.png" alt="ARTPARK Logo" class="partner-logo-img" style="filter: brightness(0) invert(1);">
-                <!-- This filter turns your dark logo white -->
-                <img src="iisc_logo.png" alt="IISc Logo" class="partner-logo-img" style="filter: brightness(0) invert(1);">
-                <!-- This logo is full color, so no filter is applied -->
+                <img src="artpark_logo.png" alt="ARTPARK Logo" class="partner-logo-img">
+                <img src="iisc_logo.png" alt="IISc Logo" class="partner-logo-img"
                 <img src="govt_of_karnataka_logo.png" alt="Government of Karnataka Logo" class="partner-logo-img">
             </div>
         </div>
