Fix duplicate IISc logo in index.html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <!-- **** MODIFICATION: Pointing to your uploaded logos **** -->
             <div class="flex flex-wrap justify-center items-center">
                 <img src="artpark_logo.png" alt="ARTPARK Logo" class="partner-logo-img">
-                <img src="iisc_logo.png" alt="IISc Logo" class="partner-logo-img"
+                <img src="iisc_logo.png" alt="IISc Logo" class="partner-logo-img">
                 <img src="govt_of_karnataka_logo.png" alt="Government of Karnataka Logo" class="partner-logo-img">
             </div>
         </div>
