Update copyright line in footer
Updated copyright line to reflect current year and rights.

--- a/index.html
+++ b/index.html
@@ -260,11 +260,9 @@
     <!-- Footer -->
     <footer class="bg-gray-900 border-t border-gray-700">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8 text-center">
-            <p class="text-base text-gray-40Message
-                &copy; 2025 Takşa Factory OS @ ARTPARK
-            </p>
-            <p class="text-base text-gray-400 mt-1">
-                Website URL: https://taksa-factory.github.io/
+            <!-- **** MODIFICATION: Updated Copyright Line **** -->
+            <p class="text-base text-gray-400">
+                &copy; 2025 Takşa Factory OS @ ARTPARK. All rights reserved.
             </p>
         </div>
     </footer>
