Update 'Coming Soon' message and copyright line

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
             <div class="mt-10">
                 <a href="#features" class="btn-primary text-lg">Learn More</a>
             </div>
+            <!-- **** MODIFICATION: Updated "Coming Soon" Message & Color **** -->
+            <p class="mt-8 text-lg font-semibold text-blue-300">
+                Big things are coming soon! Stay tuned.
+            </p>
         </div>
     </div>
 
@@ -115,7 +119,6 @@
             <p class="text-center text-sm font-semibold text-gray-400 uppercase tracking-wider mb-6">
                 Supported by
             </p>
-            <!-- **** MODIFICATION: Pointing to your uploaded logos **** -->
             <div class="flex flex-wrap justify-center items-center">
                 <img src="artpark_logo.png" alt="ARTPARK Logo" class="partner-logo-img">
                 <img src="iisc_logo.png" alt="IISc Logo" class="partner-logo-img">
@@ -260,7 +263,6 @@
     <!-- Footer -->
     <footer class="bg-gray-900 border-t border-gray-700">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8 text-center">
-            <!-- **** MODIFICATION: Updated Copyright Line **** -->
             <p class="text-base text-gray-400">
                 &copy; 2025 Takşa Factory OS @ ARTPARK. All rights reserved.
             </p>
