--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="page-background"></div>
 
     <nav class="fixed top-0 w-full z-50 nav-blur">
-        <div class="w-full px-6 md:px-12 h-20 flex justify-between items-center">
+        <div class="w-full px-6 md:px-12 h-16 flex justify-between items-center">
             <div class="flex items-center space-x-3">
-                <img src="taksa_logo.png" alt="Takşa Logo" class="h-12 w-auto">
-                <span class="text-3xl font-bold tracking-tight text-white">Takşa</span>
+                <img src="taksa_logo.png" alt="Takşa Logo" class="h-10 w-auto">
+                <span class="text-2xl font-bold tracking-tight text-white">Takşa</span>
             </div>
             <div class="hidden md:flex items-center space-x-8 text-sm font-medium">
                 <a href="#about" class="text-slate-400 hover:text-teal-400 transition">About</a>
@@ -36,11 +36,10 @@
     <section class="relative h-screen flex items-center justify-center overflow-hidden">
         <div class="video-docker">
             <video autoplay muted loop playsinline poster="https://placehold.co/1920x1080/020617/020617">
-                <source
-                    src="https://assets.mixkit.co/videos/preview/mixkit-software-developer-working-on-code-monitor-close-up-1728-large.mp4"
-                    type="video/mp4">
+                <source src="./background_video.mp4" type="video/mp4">
             </video>
         </div>
+
         <div class="video-overlay-gradient"></div>
 
         <div class="relative z-10 text-center px-6 max-w-6xl mt-16">
@@ -73,53 +72,57 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">Enabling MSMEs for the AI Era</h2>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-                <div class="industrial-card p-8 group">
-                    <div class="w-10 h-10 mb-6 text-teal-400">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <div class="industrial-card p-8 group relative overflow-hidden">
+                    <div class="icon-wrapper mb-6">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-10 h-10">
+                            stroke="currentColor" class="w-10 h-10 text-teal-400">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125" />
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold text-white mb-3">Digitize Every Process</h3>
-                    <p class="text-slate-400 text-sm leading-relaxed">From the shop floor to the cloud, gain complete
+                    <h3 class="text-xl font-bold text-white mb-3 relative z-10">Digitize Every Process</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed relative z-10">From the shop floor to the cloud,
+                        gain complete
                         visibility and control over your operations.</p>
                 </div>
-                <div class="industrial-card p-8 group">
-                    <div class="w-10 h-10 mb-6 text-teal-400">
+                <div class="industrial-card p-8 group relative overflow-hidden">
+                    <div class="icon-wrapper mb-6">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-10 h-10">
+                            stroke="currentColor" class="w-10 h-10 text-teal-400">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.894 20.567L16.5 21.75l-.394-1.183a2.25 2.25 0 00-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 001.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 001.423 1.423l1.183.394-1.183.394a2.25 2.25 0 00-1.423 1.423z" />
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold text-white mb-3">AI-Powered Insights</h3>
-                    <p class="text-slate-400 text-sm leading-relaxed">Use predictive maintenance, quality monitoring,
+                    <h3 class="text-xl font-bold text-white mb-3 relative z-10">AI-Powered Insights</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed relative z-10">Use predictive maintenance, quality
+                        monitoring,
                         and advanced optimization to save costs and boost productivity.</p>
                 </div>
-                <div class="industrial-card p-8 group">
-                    <div class="w-10 h-10 mb-6 text-teal-400">
+                <div class="industrial-card p-8 group relative overflow-hidden">
+                    <div class="icon-wrapper mb-6">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-10 h-10">
+                            stroke="currentColor" class="w-10 h-10 text-teal-400">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M13.5 10.5V6.75a4.5 4.5 0 119 0v3.75M3.75 21.75h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H3.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold text-white mb-3">Open, Secure & Transparent</h3>
-                    <p class="text-slate-400 text-sm leading-relaxed">Freedom to build, customize, and innovate with a
+                    <h3 class="text-xl font-bold text-white mb-3 relative z-10">Open, Secure & Transparent</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed relative z-10">Freedom to build, customize, and
+                        innovate with a
                         secure, community-driven, and transparent platform.</p>
                 </div>
-                <div class="industrial-card p-8 group">
-                    <div class="w-10 h-10 mb-6 text-teal-400">
+                <div class="industrial-card p-8 group relative overflow-hidden">
+                    <div class="icon-wrapper mb-6">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-10 h-10">
+                            stroke="currentColor" class="w-10 h-10 text-teal-400">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M15 8.25H9m6 3H9m3 6l-3-3h1.5a3 3 0 100-6M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold text-white mb-3">Affordable & Scalable</h3>
-                    <p class="text-slate-400 text-sm leading-relaxed">Designed to bring Industry 5.0 capabilities within
+                    <h3 class="text-xl font-bold text-white mb-3 relative z-10">Affordable & Scalable</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed relative z-10">Designed to bring Industry 5.0
+                        capabilities within
                         reach of every Indian manufacturer, large or small.</p>
                 </div>
             </div>
@@ -134,72 +137,64 @@
                     India.</p>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div class="industrial-card p-8 group flex items-start gap-6">
-                    <div
-                        class="flex-shrink-0 w-12 h-12 rounded-lg bg-teal-500/10 flex items-center justify-center border border-teal-500/30">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="industrial-card p-8 group relative overflow-hidden">
+                    <div class="icon-wrapper mb-6">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-7 h-7 text-teal-400">
+                            stroke="currentColor" class="w-10 h-10 text-teal-400">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M3.75 21h16.5M4.5 3h15M5.25 3v18m13.5-18v18M9 6.75h1.5m-1.5 3h1.5m-1.5 3h1.5m3-6H15m-1.5 3H15m-1.5 3H15M9 21v-3.375c0-.621.504-1.125 1.125-1.125h3.75c.621 0 1.125.504 1.125 1.125V21" />
                         </svg>
                     </div>
-                    <div>
-                        <h3 class="text-xl font-bold text-white mb-2">Factory Owners & MSMEs</h3>
-                        <p class="text-slate-400 text-sm leading-relaxed">Be an Early Adopter and see the change in your
-                            productivity and efficiency.</p>
-                    </div>
+                    <h3 class="text-xl font-bold text-white mb-3 relative z-10">Factory Owners & MSMEs</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed relative z-10">Be an Early Adopter and see the
+                        change in your
+                        productivity and efficiency.</p>
                 </div>
-                <div class="industrial-card p-8 group flex items-start gap-6">
-                    <div
-                        class="flex-shrink-0 w-12 h-12 rounded-lg bg-teal-500/10 flex items-center justify-center border border-teal-500/30">
+                <div class="industrial-card p-8 group relative overflow-hidden">
+                    <div class="icon-wrapper mb-6">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-7 h-7 text-teal-400">
+                            stroke="currentColor" class="w-10 h-10 text-teal-400">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M17.25 6.75L22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3l-4.5 18" />
                         </svg>
                     </div>
-                    <div>
-                        <h3 class="text-xl font-bold text-white mb-2">FOSS Contributors</h3>
-                        <p class="text-slate-400 text-sm leading-relaxed">Join our community. Help build, innovate, and
-                            shape the future of Takşa OS.</p>
-                    </div>
+                    <h3 class="text-xl font-bold text-white mb-3 relative z-10">FOSS Contributors</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed relative z-10">Join our community. Help build,
+                        innovate, and
+                        shape the future of Takşa OS.</p>
                 </div>
-                <div class="industrial-card p-8 group flex items-start gap-6">
-                    <div
-                        class="flex-shrink-0 w-12 h-12 rounded-lg bg-teal-500/10 flex items-center justify-center border border-teal-500/30">
+                <div class="industrial-card p-8 group relative overflow-hidden">
+                    <div class="icon-wrapper mb-6">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-7 h-7 text-teal-400">
+                            stroke="currentColor" class="w-10 h-10 text-teal-400">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M18 18.72a9.094 9.094 0 003.741-.479 3 3 0 00-4.682-2.72m.94 3.198l.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0112 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 016 18.719m12 0a5.971 5.971 0 00-.941-3.197m0 0A5.995 5.995 0 0012 12.75a5.995 5.995 0 00-5.058 2.772m0 0a3 3 0 00-4.681 2.72 8.986 8.986 0 003.74.477m.94-3.197a5.971 5.971 0 00-.94 3.197M15 6.75a3 3 0 11-6 0 3 3 0 016 0zm6 3a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0zm-13.5 0a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0z" />
                         </svg>
                     </div>
-                    <div>
-                        <h3 class="text-xl font-bold text-white mb-2">System Integrators</h3>
-                        <p class="text-slate-400 text-sm leading-relaxed">Partner with us to deploy and support Takşa OS
-                            for clients across India.</p>
-                    </div>
+                    <h3 class="text-xl font-bold text-white mb-3 relative z-10">System Integrators</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed relative z-10">Partner with us to deploy and
+                        support Takşa OS
+                        for clients across India.</p>
                 </div>
-                <div class="industrial-card p-8 group flex items-start gap-6">
-                    <div
-                        class="flex-shrink-0 w-12 h-12 rounded-lg bg-teal-500/10 flex items-center justify-center border border-teal-500/30">
+                <div class="industrial-card p-8 group relative overflow-hidden">
+                    <div class="icon-wrapper mb-6">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-7 h-7 text-teal-400">
+                            stroke="currentColor" class="w-10 h-10 text-teal-400">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M8.25 3v1.5M4.5 8.25H3m18 0h-1.5M4.5 12H3m18 0h-1.5m-15 3.75H3m18 0h-1.5M8.25 19.5V21M12 3v1.5m0 15V21m3.75-18v1.5m0 15V21m-9-1.5h10.5a2.25 2.25 0 002.25-2.25V6.75a2.25 2.25 0 00-2.25-2.25H6.75A2.25 2.25 0 004.5 6.75v10.5a2.25 2.25 0 002.25 2.25zm.75-12h9v9h-9v-9z" />
                         </svg>
                     </div>
-                    <div>
-                        <h3 class="text-xl font-bold text-white mb-2">Hardware & IoT Makers</h3>
-                        <p class="text-slate-400 text-sm leading-relaxed">Integrate your devices and sensors with our
-                            platform. Let's build a connected ecosystem.</p>
-                    </div>
+                    <h3 class="text-xl font-bold text-white mb-3 relative z-10">Hardware & IoT Makers</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed relative z-10">Integrate your devices and sensors
+                        with our
+                        platform. Let's build a connected ecosystem.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="platform" class="py-24 relative border-t border-slate-800/50">
+    <section id="platform" class="py-24 relative">
         <div class="max-w-7xl mx-auto px-6 relative z-10">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
 
@@ -280,7 +275,7 @@
         </div>
     </section>
 
-    <section id="features" class="relative py-24 border-t border-slate-800/50">
+    <section id="features" class="relative py-24">
         <div class="max-w-7xl mx-auto px-6 relative z-10">
             <div class="grid grid-cols-1 gap-24 md:gap-32">
 
