redefined the navigation for the buttons in the header section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <div class="hidden md:flex items-center space-x-8 text-sm font-medium">
                 <a href="#about" class="text-slate-400 hover:text-teal-400 transition">About</a>
                 <a href="#platform" class="text-slate-400 hover:text-teal-400 transition">Platform</a>
-                <a href="#community" class="text-slate-400 hover:text-teal-400 transition">Community</a>
+                <a href="https://www.discourse.org/open-source" target="_blank" rel="noopener noreferrer"
+                    class="text-slate-400 hover:text-teal-400 transition">Community</a>
                 <a href="#contact"
                     class="bg-teal-600/10 border border-teal-500/50 text-teal-400 px-5 py-2 rounded-md hover:bg-teal-500 hover:text-white transition">Contact
                     Us</a>
@@ -33,7 +34,7 @@
         </div>
     </nav>
 
-    <section class="relative h-screen flex items-center justify-center overflow-hidden">
+    <section id="about" class="relative h-screen flex items-center justify-center overflow-hidden">
         <div class="video-docker">
             <video autoplay muted loop playsinline poster="https://placehold.co/1920x1080/020617/020617">
                 <source src="./background_video.mp4" type="video/mp4">
@@ -291,17 +292,7 @@
                     </div>
                 </div>
 
-                <div class="bg-transparent border-0 p-6 flex flex-col gap-6 items-center">
-                    <div class="text-center w-full">
-                        <h3 class="text-3xl md:text-4xl font-bold text-white mb-8">Factory Co-pilot</h3>
-                    </div>
-                    <div
-                        class="rounded-lg overflow-hidden border border-slate-700/50 relative w-full md:w-3/4 aspect-video bg-slate-900/50">
-                        <video autoplay muted loop playsinline class="w-full h-full object-contain">
-                            <source src="./factory_copilot.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                </div>
+
 
             </div>
         </div>
