--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="hidden md:flex items-center space-x-8 text-sm font-medium">
                 <a href="#about" class="text-slate-400 hover:text-teal-400 transition">About</a>
                 <a href="#platform" class="text-slate-400 hover:text-teal-400 transition">Platform</a>
-                <a href="https://www.discourse.org/open-source" target="_blank" rel="noopener noreferrer"
-                    class="text-slate-400 hover:text-teal-400 transition">Community</a>
+                <!-- <a href="https://www.discourse.org/open-source" target="_blank" rel="noopener noreferrer"
+                    class="text-slate-400 hover:text-teal-400 transition">Community</a> -->
                 <a href="#contact"
                     class="bg-teal-600/10 border border-teal-500/50 text-teal-400 px-5 py-2 rounded-md hover:bg-teal-500 hover:text-white transition">Contact
                     Us</a>
