changed the logo

--- a/index.html
+++ b/index.html
@@ -310,16 +310,45 @@
 
                 <div class="relative w-full overflow-hidden scroller-mask">
                     <div class="flex w-max animate-marquee">
-                        <div class="flex items-center gap-[28rem] px-[14rem] ">
-                            <img src="artpark_logo.png" alt="ARTPARK" class="h-40 w-auto">
-                            <img src="iisc_logo.png" alt="IISc" class="h-48 w-auto">
-                            <img src="govt_of_karnataka_logo.png" alt="Govt of KA" class="h-52 w-auto">
+
+                        <div class="flex items-center gap-24 md:gap-40 px-10 md:px-20">
+                            <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
+                                <img src="artpark_rmbg.png" alt="ARTPARK" class="max-w-full max-h-full object-contain">
+                            </div>
+                            <div class="w-32 md:w-44 h-20 md:h-32 flex items-center justify-center shrink-0">
+                                <img src="iisc_logo_rmbg.png" alt="IISc" class="max-w-full max-h-full object-contain">
+                            </div>
+                            <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
+                                <img src="kranata_goverment_rmgb.png" alt="Govt of KA"
+                                    class="max-w-full max-h-full object-contain">
+                            </div>
+                            <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
+                                <img src="indic.png" alt="Indic" class="max-w-full max-h-full object-contain">
+                            </div>
+                            <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
+                                <img src="ather_rmbg.png" alt="Ather" class="max-w-full max-h-full object-contain">
+                            </div>
                         </div>
-                        <div class="flex items-center gap-[28rem] px-[14rem] ">
-                            <img src="artpark_logo.png" alt="ARTPARK" class="h-40 w-auto">
-                            <img src="iisc_logo.png" alt="IISc" class="h-48 w-auto">
-                            <img src="govt_of_karnataka_logo.png" alt="Govt of KA" class="h-52 w-auto">
+
+                        <div class="flex items-center gap-24 md:gap-40 px-10 md:px-20">
+                            <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
+                                <img src="artpark_rmbg.png" alt="ARTPARK" class="max-w-full max-h-full object-contain">
+                            </div>
+                            <div class="w-32 md:w-44 h-20 md:h-32 flex items-center justify-center shrink-0">
+                                <img src="iisc_logo_rmbg.png" alt="IISc" class="max-w-full max-h-full object-contain">
+                            </div>
+                            <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
+                                <img src="kranata_goverment_rmgb.png" alt="Govt of KA"
+                                    class="max-w-full max-h-full object-contain">
+                            </div>
+                            <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
+                                <img src="indic.png" alt="Indic" class="max-w-full max-h-full object-contain">
+                            </div>
+                            <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
+                                <img src="ather_rmbg.png" alt="Ather" class="max-w-full max-h-full object-contain">
+                            </div>
                         </div>
+
                     </div>
                 </div>
 
