--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 class="text-xl md:text-2xl font-semibold text-teal-500 hover:text-teal-400 transition underline underline-offset-8 decoration-teal-500/30">taksa@artpark.in</a>
 
             <div class="py-10 relative z-10 mt-20">
-                <p class="text-center text-xs font-semibold text-slate-500 uppercase tracking-widest mb-12">Supported by
+                <p class="text-center text-xs font-semibold text-slate-500 uppercase tracking-widest mb-12">Partners
                 </p>
 
                 <div class="relative w-full overflow-hidden scroller-mask">
