--- a/index.html
+++ b/index.html
@@ -328,6 +328,9 @@
                             <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
                                 <img src="ather_rmbg.png" alt="Ather" class="max-w-full max-h-full object-contain">
                             </div>
+                            <div class="w-44 md:w-60 h-32 md:h-44 flex items-center justify-center shrink-0">
+                                <img src="srk2.png" alt="SRK" class="max-w-full max-h-full object-contain">
+                            </div>
                         </div>
 
                         <div class="flex items-center gap-24 md:gap-40 px-10 md:px-20">
@@ -346,6 +349,9 @@
                             </div>
                             <div class="w-40 md:w-56 h-28 md:h-40 flex items-center justify-center shrink-0">
                                 <img src="ather_rmbg.png" alt="Ather" class="max-w-full max-h-full object-contain">
+                            </div>
+                            <div class="w-44 md:w-60 h-32 md:h-44 flex items-center justify-center shrink-0">
+                                <img src="srk2.png" alt="SRK" class="max-w-full max-h-full object-contain">
                             </div>
                         </div>
 
